--- a/assest/css/weather-style.css
+++ b/assest/css/weather-style.css
@@ -74,7 +74,7 @@
   --on-primary: #100e17;
   --background: #f8f8f8;
   --on-background: #222;
-  --surface: #f0f0f0; /* Slightly darker surface */
+  --surface: #f0f0f0;
   --on-surface: #333;
   --on-surface-variant: #666;
   --on-surface-variant-2: #888;
